--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 <body>
 
 <header>
-    <h1>My Portfolio</h1>
+    <h1>Portfolio.</h1>
 </header>
 
 <nav>
@@ -25,7 +25,7 @@
 </section>
 
 <footer>
-    <p>Contact: calvinssendawula@gmail.com</p>
+    <p>THE SKY IS THE LIMIT</p>
 </footer>
 
 </body>
