--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,8 @@
 <script>
     document.addEventListener("DOMContentLoaded", function() {
         const textElement = document.getElementById("typing-text");
-        const words = ["a Full Stack Developer", "an AI Enthusiast", "a Software Engineer", "a Problem Solver"];
+        const words = ["I'm a Full Stack Developer", "I'm an AI Enthusiast", "I'm a Software Engineer",
+            "I'm a Car Enthusiast", "I love swimming", "I'm a Watch Enthusiast"];
         let wordIndex = 0;
         let letterIndex = 0;
         let isDeleting = false;
