aligned navigationw with portfolio and added personalities

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,8 +31,8 @@
 <script>
     document.addEventListener("DOMContentLoaded", function() {
         const textElement = document.getElementById("typing-text");
-        const words = ["I'm a Full Stack Developer", "I'm an AI Enthusiast", "I'm a Software Engineer",
-            "I'm a Car Enthusiast", "I love swimming", "I'm a Watch Enthusiast"];
+        const words = ["I'm a Full Stack Developer", "I'm an AI Enthusiast", "I'm an Open-Source contributor",
+            "I'm a Software Engineer", "I'm a Car Enthusiast", "I love swimming", "I'm a Watch Enthusiast"];
         let wordIndex = 0;
         let letterIndex = 0;
         let isDeleting = false;
