Added experiences tab

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
 <nav>
     <a href="{{ '/' | relative_url }}">Home</a>
     <a href="{{ '/about' | relative_url }}">About Me</a>
+    <a href="{{ '/experience' | relative_url }}">Experience</a>
     <a href="{{ '/community' | relative_url }}">Community</a>
     <a href="{{ '/projects' | relative_url }}">Projects</a>
 </nav>
