--- a/styles.css
+++ b/styles.css
@@ -169,7 +169,7 @@ section {
     color: black;
     padding: 30px;
     border-radius: 10px;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
     max-width: 500px;
     text-align: left;
 }
